--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
+body {
+  background: #f5f5f5;
+}
+
 .App {
   text-align: center;
+  margin: 0 auto;
+  width: 600px;
+  min-height: 300px;
+  margin-top: 70px;
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
@@ -18,5 +28,237 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.header {
+  font-size: 7em;
+  color: rgba(175, 47, 47, 0.15);
+  font-weight: 100;
+  margin-bottom: 0;
+}
+.new-todo {
+  padding: 16px 16px 16px 60px;
+  border: none;
+  border: 1px solid #e6e6e6;
+  font-size: 24px;
+  font-weight: inherit;
+  line-height: 1.4em;
+  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+  margin: auto;
+  width: 67.5%;
+  margin-bottom: 22px;
+}
+ul {
+  width: 80%;
+  margin:  auto;
+  padding:  0;
+}
+ul li {
+  cursor: pointer;
+  padding: 12px 8px 12px 40px;
+  list-style-type: none;
+  background: #fff;
+  font-size: 18px;
+  transition: 0.2s;
+  margin-bottom: 5px;
+  text-align: left;
+  padding-left: 60px;
+  width: 69%;
+}
+ul li:hover {
+  background-color: #ecd8d8;
+}
+.close {
+  position: absolute;
+  right: 0.1%;
+  top: 0;
+  padding: 0 12px 0 12px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #e29690;
+  color: #755d5d;
+  cursor: pointer;
+}
+.close1 {
+  cursor: pointer;
+  position: absolute;
+  right: 8.3%;
+  top: 0;
+  padding: 0 5px 0 5px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #f1e5d0;
+  color: #bdb3b3;
+}
+
+.close:hover {
+  color: white;
+  background-color: #f44336;
+}
+.close1:hover {
+  color: white;
+  background-color: #f3b647;
+}
+.mi {
+  position: absolute;
+  left: 0;
+  top: 25%;
+  font-size: 24px;
+  margin-left: 20px;
+  color: #04040457;
+}
+.non {
+  color: #13984a;
+}
+.footer {
+  width: 80%;
+  margin: auto;
+  margin-bottom: 2px;
+  font-size: inherit;
+  border: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  background: #fff;
+  font-size: 12px;
+  justify-content: space-between
+}
+.formcontrol1 {
+  width: 62%;
+  height: 35px;
+  font-size: 22px;
+  padding-left: 20px;
+  border: 1px solid #e6e6e6;
+}
+.filter1 {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
+  margin-bottom: 7px
+}
+.form1 {
+  height: 38.5px;
+  font-size: 16px;
+  padding-left: 7px;
+  border: none;
+  color: #68900f;
+}
+.mo1 {
+  position: absolute;
+  right: -85px;
+  border: 1px #F00 solid;
+  border-radius: 2px;
+  padding: 4px 7px 4px 7px;
+  cursor: pointer;
+  margin: 0;
+}
+.itemleft {
+  padding: 0;
+  margin-left: 30px
+}
+.filter {
+  margin-right: 90px;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  padding-bottom: 6px
+}
+.done {
+  color: #d9d9d9;
+  text-decoration: line-through;
+}
+.title {
+  word-wrap: break-word;
+  width: 100%;
+}
+.error {
+  color: #F00
+}
+.sort {
+  height: 29px;
+  padding-top: 10px;
+  color: #4c4444;
+}
+input[type=radio] {
+  visibility:hidden;
+  margin-right: 6px
+}
+input[type=radio]:checked + label {
+  border-color: rgba(175, 47, 47, 0.2);
+}
+label.ex1 {
+  border: #fff solid 1px;
+  cursor: pointer;
+  padding: 3px 6px 3px 6px;
+  border-radius: 3px;
+}
+label.ex1:hover {
+  border-color: rgba(175, 47, 47, 0.2);
+}
+.modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  margin: 0
+}
+.modalcontent {
+  background-color: #fefefe;
+  margin: 16% auto; /* 15% from the top and centered */
+  padding: 40px 20px 20px 20px;
+  border-radius: 10px;
+  width: 30%;
+}
+.close11 {
+  color: #f00;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close11:hover,
+.close11:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.form23>input {
+  margin: 12px 0;
+  font-size: 20px;
+  width: 70%;
+  padding-left: 20px
+}
+.formcheck {
+  margin-bottom: 25px
+}
+.btn1 {
+  cursor: pointer;
+  margin-right: 15px;
+  font-size: 16px
+}
+.btn2 {
+  margin-left: 15px;
+  font-size: 16px;
+  cursor: pointer
+}
+.cover {
+  position: relative
 }
